# rax25kb

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  TREE.md  cargo-build.sh  rax25kb.exe.sha256sum  rax25kb.md  rax25kb.txt
.github/workflows/: old-rust.yml  rust.yml  sha  sha256sum-versioning-worflow.yml  sha256sum-versioning-workflow.yml  ubuntu.yml  win-lin.yml  win-original-workflow_and_version.yml  win-sha256sum-workflow.yml
doc/: CROSS-CONNECT-GUIDE.md  V1.7.3_RELEASE.md
doc/examples/: agw-server.cfg  channel-filtering.cfg  comprehensive.cfg  kiss-xkiss.cfg  kisscopy.cfg  kpc-9612.cfg  multi-client.cfg  multi-tnc.cfg  single-tnc.cfg  tcp-client.cfg  tcp-to-tcp-dangerous.cfg  windows.cfg  xkiss-buffered.cfg
doc/source/: conf.py  index.rst  introduction.rst  usage.rst  windows.rst
docs/: .index.rst.swp  ARCHITECTURE.md  CROSS-CONNECT-GUIDE1.md  CROSS-CONNECT-GUIDE2.md  MIGRATION-GUIDE.md  Makefile  README-old.html  README-old.md  conf.py  contributing.rst  index.rst  integration_example.txt  kiss_protocol.rst  license.rst  rax25kb-logo.txt
docs/_build/doctrees/: architecture.doctree  ax25_protocol.doctree  building.doctree  changelog.doctree  configuration.doctree  contributing.doctree  environment.pickle  examples.doctree  (+9 more)
examples/: rax25kb.cfg  rax25kb_crossconnect_config.cfg
man/: rax25kb.1  rax25kb.cfg.3  rax25kb.cfg.5
scripts/: build-docs.sh  cargo-inst.sh  rename_rust_files.sh
src/: crossconnect_config.rs  crossconnect_manager.rs  kiss_translation.rs  main.rs  main.rs-
tests/: test_man_page.sh
(+34 files in other folders)
