[package]
name = "rax25kb"
version = "1.0.0"
edition = "2021"
authors = ["rax25kb contributors"]
description = "AX.25 KISS protocol bridge for serial to TCP connections"
license = "GPL-3.0-or-later"
repository = "https://github.com/ke4ahr/rax25kb"
readme = "README.md"
keywords = ["amateur-radio", "ax25", "kiss", "tnc", "packet-radio"]
categories = ["network-programming"]

[dependencies]
serialport = "4.5"
chrono = "0.4"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
